--- a/src/fe/index.html
+++ b/src/fe/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/index.css" type="text/css" media="all">
     <script>
       dojoConfig = {
+         cacheBust: true,
          parseOnLoad: true,
         packages: [
            { name: "app", location: "../../../app" }
