--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -8,7 +8,7 @@
 
     <div class="show-face ">
       <div class="face">
-        <img class="real-face" data-dojo-attach-point="realFaceNode"  src=""/>
+        <img class="real-face" data-dojo-attach-point="realFaceNode" style="display: none" src=""/>
         <img class="face-mask" src="styles/images/face-mask.png"/>
         <img class="marker-circle" data-dojo-attach-point="markerCircleNode" src="styles/images/marker-circle.png"/>
       </div>
