--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -6,9 +6,9 @@
       酷创人脸识别系统</div>
 
 
-    <div class="show-face ">
-      <div class="face">
-        <img class="real-face" data-dojo-attach-point="realFaceNode" style="display: none" src=""/>
+    <div class="show-face " data-dojo-attach-point="showFaceNode">
+      <div class="face" data-dojo-attach-point="faceNode">
+        <img class="real-face" data-dojo-attach-point="realFaceNode" src=""/>
         <img class="face-mask" src="styles/images/face-mask.png"/>
         <img class="marker-circle" data-dojo-attach-point="markerCircleNode" src="styles/images/marker-circle.png"/>
       </div>
