--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -6,7 +6,7 @@
       酷创人脸识别系统</div>
 
 
-    <div class="show-face " data-dojo-attach-point="showFaceNode">
+    <div class="show-face " data-dojo-attach-point="showFaceNode" style="visibility: hidden">
       <div class="face" data-dojo-attach-point="faceNode">
         <img class="real-face" data-dojo-attach-point="realFaceNode" src=""/>
         <img class="face-mask" src="styles/images/face-mask.png"/>
@@ -14,7 +14,7 @@
       </div>
       <div class="tip">
         <div class="icon"></div>
-        <div class="text">
+        <div class="text" >
           山东酷创  欢迎您
         </div>
       </div>
@@ -72,7 +72,7 @@
 
   <div class="video">
     <object type='application/x-vlc-plugin' id='vlc' events='True' width="520" height="300" pluginspage="http://www.videolan.org" codebase="http://downloads.videolan.org/pub/videolan/vlc-webplugins/2.0.6/npapi-vlc-2.0.6.tar.xz">
-      <param name='mrl' value='rtsp://184.72.239.149/vod/mp4://BigBuckBunny_175k.mov' />
+      <param name='mrl' value='rtsp://admin:admin@192.168.10.44:554/1/1' />
       <param name='volume' value='50' />
       <param name='autoplay' value='true' />
       <param name='loop' value='false' />
