--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -1,7 +1,7 @@
 <div class="app">
   <div class="show-face-wrapper center">
 
-    <div class="title center">
+	<div class="title center" style="visibility:hidden">
       <img class="img" src="styles/images/title01.png"/>
       酷创人脸识别系统</div>
 
@@ -14,7 +14,7 @@
       </div>
       <div class="tip">
         <div class="icon"></div>
-        <div class="text" >
+        <div class="text" style="font-family: 微软雅黑;">
           山东酷创  欢迎您
         </div>
       </div>
