--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -15,7 +15,7 @@
       <div class="tip">
         <div class="icon"></div>
         <div class="text" style="font-family: 微软雅黑;">
-          山东酷创  欢迎您
+          <span data-dojo-attach-point="personNameNode">山东酷创  欢迎您</span>
         </div>
       </div>
     </div>
