--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -9,7 +9,7 @@
     <div class="show-face " data-dojo-attach-point="showFaceNode" style="visibility: hidden">
       <div class="face" data-dojo-attach-point="faceNode">
         <img class="real-face" data-dojo-attach-point="realFaceNode" src=""/>
-        <img class="face-mask" src="styles/images/face-mask.png"/>
+        <img class="face-mask" data-dojo-attach-point="faceMaskNode" src="styles/images/face-mask.png"/>
         <img class="marker-circle" data-dojo-attach-point="markerCircleNode" src="styles/images/marker-circle.png"/>
       </div>
       <div class="tip">
