--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -1,28 +1,33 @@
 <div class="app">
-  <div class="show-face-wrapper center">
 
-	<div class="title center" style="visibility:hidden">
+  <div class="title center" style="visibility:visible">
       <img class="img" src="styles/images/title01.png"/>
       酷创人脸识别系统</div>
 
+    <div class="show-face-list">
 
-    <div class="show-face " data-dojo-attach-point="showFaceNode" style="visibility: hidden">
-      <div class="face" data-dojo-attach-point="faceNode">
-        <img class="real-face" data-dojo-attach-point="realFaceNode" src=""/>
-        <img class="face-mask" data-dojo-attach-point="faceMaskNode" src="styles/images/face-mask.png"/>
-        <img class="marker-circle" data-dojo-attach-point="markerCircleNode" src="styles/images/marker-circle.png"/>
-      </div>
-      <div class="tip">
-        <div class="icon"></div>
-        <div class="text" style="font-family: 微软雅黑;">
-          <span data-dojo-attach-point="personNameNode">山东酷创  欢迎您</span>
-        </div>
-      </div>
-    </div>
+          <div class="show-face-wrapper center">
+
+
+
+
+            <div class="show-face " data-dojo-attach-point="showFaceNode" style="visibility: hidden">
+              <div class="face" data-dojo-attach-point="faceNode">
+                <img class="real-face" data-dojo-attach-point="realFaceNode" src=""/>
+                <img class="face-mask" data-dojo-attach-point="faceMaskNode" src="styles/images/face-mask.png"/>
+                <img class="marker-circle" data-dojo-attach-point="markerCircleNode" src="styles/images/marker-circle.png"/>
+              </div>
+              <div class="tip">
+                <div class="icon"></div>
+                <div class="text" style="font-family: 微软雅黑;">
+                  <span data-dojo-attach-point="personNameNode">山东酷创  欢迎您</span>
+                </div>
+              </div>
+            </div>
+
+          </div>
 
   </div>
-
-
 
 
   <div class="face-list center">
