--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -4,22 +4,17 @@
       <img class="img" src="styles/images/title01.png"/>
       酷创人脸识别系统</div>
 
-    <div class="show-face-list">
+    <div class="show-face-list" data-dojo-attach-point="showFaceListNode">
 
-          <div class="show-face-wrapper center">
-              <table style="width: 100%; text-align: center;">
+          <div class="show-face-wrapper center" data-dojo-attach-point="showFaceWrapperNode">
+              <!-- <table style="width: 100%; text-align: center;">
               	<tr>
-              		<td>
-	              		<div data-dojo-type="app/widgets/FaceReg/main"></div>
-              		</td>
-              		<td>
-	              		<div data-dojo-type="app/widgets/FaceReg/main"></div>
-              		</td>
-              		<td>
-	              		<div data-dojo-type="app/widgets/FaceReg/main"></div>
-              		</td>
+
                 </tr>
-              </table>
+              </table> -->
+              <div data-dojo-type="app/widgets/FaceReg/main"></div>
+              <div data-dojo-type="app/widgets/FaceReg/main"></div>
+              <div data-dojo-type="app/widgets/FaceReg/main"></div>
           </div>
 
   </div>
