--- a/src/fe/app/widgets/FaceReg/t.html
+++ b/src/fe/app/widgets/FaceReg/t.html
@@ -1,15 +1,17 @@
-<div class="show-face " data-dojo-attach-point="showFaceNode" style="">
-	<div class="face" data-dojo-attach-point="faceNode">
-		<img class="real-face" data-dojo-attach-point="realFaceNode" src="" />
-		<img class="face-mask" data-dojo-attach-point="faceMaskNode"
-			src="styles/images/face-mask-ho-reg.png" /> <img class="marker-circle"
-			data-dojo-attach-point="markerCircleNode"
-			src="styles/images/marker-circle.png" />
-	</div>
-	<div class="tip">
-		<div class="icon"></div>
-		<div class="text" style="font-family: 微软雅黑;">
-			<span data-dojo-attach-point="personNameNode">山东酷创 欢迎您</span>
+<div class="show-face-single-wrapper">
+	<div class="show-face " data-dojo-attach-point="showFaceNode" style="">
+		<div class="face" data-dojo-attach-point="faceNode">
+			<img class="real-face" data-dojo-attach-point="realFaceNode" src="" />
+			<img class="face-mask" data-dojo-attach-point="faceMaskNode"
+				src="styles/images/face-mask-ho-reg.png" /> <img class="marker-circle"
+				data-dojo-attach-point="markerCircleNode"
+				src="styles/images/marker-circle.png" />
+		</div>
+		<div class="tip">
+			<div class="icon"></div>
+			<div class="text" style="font-family: 微软雅黑;">
+				<span data-dojo-attach-point="personNameNode">山东酷创 欢迎您</span>
+			</div>
 		</div>
 	</div>
 </div>
