--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -4,18 +4,13 @@
       <img class="img" src="styles/images/title01.png"/>
       酷创人脸识别系统</div>
 
-    <div class="show-face-list" data-dojo-attach-point="showFaceListNode">
+    <div data-dojo-type="app/widgets/AboveFaceDisplayer/main" data-dojo-attach-point="aboveFaceDisplayer">
 
-          <div class="show-face-wrapper center" data-dojo-attach-point="showFaceWrapperNode">
-              <!-- <table style="width: 100%; text-align: center;">
-              	<tr>
-
-                </tr>
-              </table> -->
+          <!-- <div class="show-face-wrapper center" data-dojo-attach-point="showFaceWrapperNode">
               <div data-dojo-type="app/widgets/FaceReg/main"></div>
               <div data-dojo-type="app/widgets/FaceReg/main"></div>
               <div data-dojo-type="app/widgets/FaceReg/main"></div>
-          </div>
+          </div> -->
 
   </div>
 
@@ -24,64 +19,7 @@
     <table class="content" data-dojo-attach-point="tableImgListNode">
       <tr>
         <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
-        </td>
-        <td>
-          <div class="item">
-            <img class="img" />
-            <div class="time"></div>
-          </div>
+          <table data-dojo-type="app/widgets/BelowFaceDisplayer/main" data-dojo-attach-point="belowFaceDisplayer"></table>
         </td>
         <td>
           <div class="videoWrapper" style="">
