--- a/src/fe/app/widgets/BelowFaceDisplayer/t.html
+++ b/src/fe/app/widgets/BelowFaceDisplayer/t.html
@@ -1,64 +1,34 @@
 <table class="belowFaceDisplayer">
 	<tr>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 		<td>
-			<div class="item">
-				<img class="img" />
-				<div class="time"></div>
-			</div>
+			<div data-dojo-type="app/widgets/BelowFaceItem/main"></div>
 		</td>
 	</tr>
 </table>
