update on deploy.

--- a/src/fe/app/app.html
+++ b/src/fe/app/app.html
@@ -18,7 +18,7 @@
   <div class="face-list center">
     <table class="content" data-dojo-attach-point="tableImgListNode">
       <tr>
-        <td>
+        <td class="faceTD">
           <table data-dojo-type="app/widgets/BelowFaceDisplayer/main" data-dojo-attach-point="belowFaceDisplayer"></table>
         </td>
         <td>
